# citymonopolis

./: .gitignore  Cargo.toml  README.md
amazintosh_rs/: Cargo.toml  build.rs
amazintosh_rs/src/: lib.rs  window.rs
amazintosh_rs/src/render/: buffer.rs  mesh.rs  mod.rs  shader.rs  types.rs  vertex.rs
src/: fragment_test.glsl  main.rs  vertex_test.glsl
